testfx/errors/error_tests/edge_45_main_global_var_ref.fx
// 测试：有main时全局变量赋其他全局变量值（应该失败）
a := 10
b := a + 5

main := () {
    print(b)
}
